🐛 Fixed whitespace bug

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -190,7 +190,6 @@ header img:last-of-type {
 #p3-runs-table article div{
   padding: 1em;
   width: 100%;
-  height: 100%;
   border-bottom: 1px solid #424242;
 }
 
@@ -214,8 +213,6 @@ header img:last-of-type {
 .p3-run-information {
   display: none;
   width: 100%;
-  height: 100%;
-  background-color: var(--white);
 }
 
 .p3-run-information article {
@@ -228,6 +225,7 @@ header img:last-of-type {
 }
 
 .p3-run-information article div {
+  align-self: normal;
   padding: 1em;
   width: 100%;
   font-weight: 500;
@@ -245,6 +243,7 @@ header img:last-of-type {
 }
 
 .p3-run-information article div p{
+  margin: auto;
   font-size: 0.8em;
 }
 
